--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.900.1",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^5.3.2",
