--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/pwa": "^0.900.1",
     "@angular/router": "~8.2.14",
     "@angular/service-worker": "~8.2.14",
+    "ag-grid-angular": "^22.1.1",
+    "ag-grid-community": "^22.1.1",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^5.3.2",
