--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "ag-grid-community": "^22.1.1",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
+    "ng-pick-datetime": "^7.0.0",
     "ngx-bootstrap": "^5.3.2",
     "ngx-google-places-autocomplete": "^2.0.4",
     "rxjs": "~6.4.0",
