change build outputdir to dist subfolder for project

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod --base-href /kbtvAngularLive/ --stats-json",
-    "publish": "angular-cli-ghpages --repo=https://github.com/fredtvet/kbtvAngularLive.git",
-    "buildPublish": "ng build --prod --base-href /kbtvAngularLive/ --stats-json && angular-cli-ghpages --repo=https://github.com/fredtvet/kbtvAngularLive.git",
+    "publish": "angular-cli-ghpages --dir dist/kbtv-client --repo=https://github.com/fredtvet/kbtvAngularLive.git",
+    "buildPublish": "ng build --prod --base-href /kbtvAngularLive/ --stats-json && angular-cli-ghpages --dir dist/kbtv-client --repo=https://github.com/fredtvet/kbtvAngularLive.git",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
