--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
+              "node_modules/animate.css/animate.min.css",
               "src/custom-theme.scss",
               "src/styles.scss"
             ],
