--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/service-worker": "~8.2.14",
     "ag-grid-angular": "^22.1.1",
     "ag-grid-community": "^22.1.1",
+    "animate.css": "^4.1.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "ng-pick-datetime": "^7.0.0",
