--- a/package.json
+++ b/package.json
@@ -19,43 +19,43 @@
     "@angular/common": "~9.1.11",
     "@angular/compiler": "~9.1.11",
     "@angular/core": "~9.1.11",
-    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "~9.1.11",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
-    "@angular/pwa": "^0.900.1",
+    "@angular/pwa": "^0.901.8",
     "@angular/router": "~9.1.11",
     "@angular/service-worker": "~9.1.11",
-    "ag-grid-angular": "^22.1.1",
-    "ag-grid-community": "^22.1.1",
+    "ag-grid-angular": "^23.2.0",
+    "ag-grid-community": "^23.2.0",
     "hammerjs": "^2.0.8",
     "ng-pick-datetime": "^7.0.0",
     "ngx-google-places-autocomplete": "^2.0.4",
     "rxjs": "~6.5.5",
-    "tslib": "^1.13.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
+    "@angular-devkit/build-angular": "^0.901.8",
     "@angular/cli": "^9.1.8",
     "@angular/compiler-cli": "~9.1.11",
     "@angular/language-service": "~9.1.11",
-    "@types/jasmine": "~3.3.8",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^14.0.13",
     "codelyzer": "^5.2.2",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.2",
+    "karma": "^5.0.9",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^5.4.4",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.8.3",
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.2",
+    "typescript": "^3.8.3",
     "webpack-bundle-analyzer": "^3.8.0"
   }
 }
