--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ag-grid-angular": "^23.2.0",
     "ag-grid-community": "^23.2.0",
     "hammerjs": "^2.0.8",
+    "idb-keyval": "^3.2.0",
     "ng-pick-datetime": "^7.0.0",
     "ngx-google-places-autocomplete": "^2.0.4",
     "rxjs": "~6.5.5",
