--- a/package.json
+++ b/package.json
@@ -15,51 +15,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.11",
+    "@angular/animations": "^9.1.12",
     "@angular/cdk": "~9.2.4",
-    "@angular/common": "~9.1.11",
-    "@angular/compiler": "~9.1.11",
-    "@angular/core": "~9.1.11",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
     "@angular/flex-layout": "^9.0.0-beta.31",
-    "@angular/forms": "~9.1.11",
+    "@angular/forms": "^9.1.12",
+    "@angular/localize": "^9.1.12",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.1.11",
-    "@angular/platform-browser-dynamic": "~9.1.11",
-    "@angular/pwa": "^0.901.8",
-    "@angular/router": "~9.1.11",
-    "@angular/service-worker": "~9.1.11",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/pwa": "^0.901.12",
+    "@angular/router": "^9.1.12",
+    "@angular/service-worker": "^9.1.12",
     "@codewithdan/observable-store": "^2.2.11",
-    "ag-grid-angular": "^23.2.0",
-    "ag-grid-community": "^23.2.0",
+    "ag-grid-angular": "^23.2.1",
+    "ag-grid-community": "^23.2.1",
     "hammerjs": "^2.0.8",
     "idb-keyval": "^3.2.0",
-    "ng-pick-datetime": "^7.0.0",
     "ngx-google-places-autocomplete": "^2.0.4",
     "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.8",
-    "@angular/cli": "^9.1.8",
-    "@angular/compiler-cli": "~9.1.11",
-    "@angular/language-service": "~9.1.11",
-    "@types/jasmine": "^3.5.10",
+    "@angular-devkit/build-angular": "^0.901.12",
+    "@angular/cli": "^9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.0.13",
+    "@types/node": "^14.11.2",
     "codelyzer": "^5.2.2",
-    "dependency-cruiser": "^9.10.1",
-    "jasmine-core": "^3.5.0",
+    "dependency-cruiser": "^9.14.1",
+    "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "^5.0.2",
-    "karma": "^5.0.9",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^7.0.0",
     "ts-node": "^8.10.2",
-    "tslint": "^6.1.2",
-    "typescript": "^3.8.3",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7",
+    "webpack-bundle-analyzer": "^3.9.0"
   }
 }
