--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "buildGit": "ng build --prod --base-href /kbtvAngularLive/ --stats-json",
-    "build": "ng build --prod --buildOptimizer=true --stats-json",
+    "build": "ng build --prod --stats-json",
     "buildPublishGit": "ng build --prod --base-href /kbtvAngularLive/ --stats-json && angular-cli-ghpages --dir dist/kbtv-client --repo=https://github.com/fredtvet/kbtvAngularLive.git",
     "test": "ng test",
     "lint": "ng lint",
