--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "analyze:wba": "webpack-bundle-analyzer dist/kbtv-client/stats.json",
-    "analyze:sme": "source-map-explorer dist/kbtv-client/**/*.js"
+    "analyze:sme": "source-map-explorer dist/kbtv-client/**/*.js",
+    "compodoc": "npx compodoc -p tsconfig.json"
   },
   "private": true,
   "dependencies": {
@@ -44,6 +45,7 @@
     "@angular/cli": "^10.1.3",
     "@angular/compiler-cli": "^10.1.3",
     "@angular/language-service": "^10.1.3",
+    "@compodoc/compodoc": "^1.1.11",
     "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.11.2",
