modularize model form, form sheet & confirm dialog

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
       "@persistance/*": ["src/app/modules/persistance/*"],
       "@state/*": ["src/app/modules/state/*"],
       "@sync/*": ["src/app/modules/sync/*"],
+      "@form-sheet/*": ["src/app/modules/form-sheet/*"],
+      "@model-form/*": ["src/app/modules/model-form/*"],
+      "@confirm-dialog/*": ["src/app/modules/confirm-dialog/*"],
       "@array/*": ["src/app/modules/utility/array-helpers/*"],
       "@datetime/*": ["src/app/modules/utility/date-time-helpers/*"],
     }
