move selectable list to seperate module & remove unneccesary dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,7 @@
       "@form-sheet/*": ["src/app/modules/form-sheet/*"],
       "@model-form/*": ["src/app/modules/model-form/*"],
       "@confirm-dialog/*": ["src/app/modules/confirm-dialog/*"],
+      "@selectable-list/*": ["src/app/modules/selectable-list/*"],  
       "@array/*": ["src/app/modules/utility/array-helpers/*"],
       "@datetime/*": ["src/app/modules/utility/date-time-helpers/*"],   
       "@global/*": ["src/app/modules/global/*"],
