--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
-    ], 
+    ],
     "lib": [
       "es2018",
       "dom"
@@ -35,6 +35,10 @@
       "array-helpers": [
         "dist/array-helpers/array-helpers",
         "dist/array-helpers"
+      ],
+      "date-time-helpers": [
+        "dist/date-time-helpers/date-time-helpers",
+        "dist/date-time-helpers"
       ]
     }
   },
