--- a/projects/array-helpers/package.json
+++ b/projects/array-helpers/package.json
@@ -2,10 +2,7 @@
   "name": "array-helpers",
   "version": "0.0.1",
   "sideEffects": false,
-  "peerDependencies": {
-    "@angular/common": "^11.0.5",
-    "@angular/core": "^11.0.5"
-  },
+  "peerDependencies": {},
   "dependencies": {
     "tslib": "^2.0.0"
   }
