--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,10 @@
       "notification": [
         "dist/notification/notification",
         "dist/notification"
+      ],
+      "persistance": [
+        "dist/persistance/persistance",
+        "dist/persistance"
       ]
     }
   },
