--- a/projects/state-management/package.json
+++ b/projects/state-management/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "sideEffects": false,
   "peerDependencies": {
-    "@angular/core": "^11.0.5"
+    "@angular/core": "^11.0.5",
+    "rxjs": "~6.5.5"
   },
   "dependencies": {
     "tslib": "^2.0.0"
