--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,6 +55,10 @@
       "state-sync": [
         "dist/state-sync/state-sync",
         "dist/state-sync"
+      ],
+      "state-model": [
+        "dist/state-model/state-model",
+        "dist/state-model"
       ]
     }
   },
