--- a/angular.json
+++ b/angular.json
@@ -497,6 +497,86 @@
           }
         }
       }
+    },
+    "selectable-list": {
+      "projectType": "library",
+      "root": "projects/selectable-list",
+      "sourceRoot": "projects/selectable-list/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "tsConfig": "projects/selectable-list/tsconfig.lib.json",
+            "project": "projects/selectable-list/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/selectable-list/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/selectable-list/src/test.ts",
+            "tsConfig": "projects/selectable-list/tsconfig.spec.json",
+            "karmaConfig": "projects/selectable-list/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/selectable-list/tsconfig.lib.json",
+              "projects/selectable-list/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "confirm-dialog": {
+      "projectType": "library",
+      "root": "projects/confirm-dialog",
+      "sourceRoot": "projects/confirm-dialog/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "tsConfig": "projects/confirm-dialog/tsconfig.lib.json",
+            "project": "projects/confirm-dialog/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/confirm-dialog/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/confirm-dialog/src/test.ts",
+            "tsConfig": "projects/confirm-dialog/tsconfig.spec.json",
+            "karmaConfig": "projects/confirm-dialog/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/confirm-dialog/tsconfig.lib.json",
+              "projects/confirm-dialog/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "kbtv-client"
