--- a/projects/kbtv-client/tsconfig.json
+++ b/projects/kbtv-client/tsconfig.json
@@ -63,6 +63,10 @@
       "form-sheet": [
         "../../dist/form-sheet/form-sheet",
         "../../dist/form-sheet"
+      ],
+      "model-form": [
+        "../../dist/model-form/model-form",
+        "../../dist/model-form"
       ]
     },
   },
