--- a/projects/kbtv-client/tsconfig.json
+++ b/projects/kbtv-client/tsconfig.json
@@ -65,6 +65,10 @@
       "model-form": [
         "../../dist/model-form/model-form",
         "../../dist/model-form"
+      ],
+      "state-auth": [
+        "../../dist/state-auth/state-auth",
+        "../../dist/state-auth"
       ]
     },
   },
