--- a/angular.json
+++ b/angular.json
@@ -498,46 +498,6 @@
         }
       }
     },
-    "selectable-list": {
-      "projectType": "library",
-      "root": "projects/selectable-list",
-      "sourceRoot": "projects/selectable-list/src",
-      "prefix": "lib",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:ng-packagr",
-          "options": {
-            "tsConfig": "projects/selectable-list/tsconfig.lib.json",
-            "project": "projects/selectable-list/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "projects/selectable-list/tsconfig.lib.prod.json"
-            }
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/selectable-list/src/test.ts",
-            "tsConfig": "projects/selectable-list/tsconfig.spec.json",
-            "karmaConfig": "projects/selectable-list/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/selectable-list/tsconfig.lib.json",
-              "projects/selectable-list/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
     "confirm-dialog": {
       "projectType": "library",
       "root": "projects/confirm-dialog",
@@ -730,6 +690,46 @@
             "tsConfig": [
               "projects/state-auth/tsconfig.lib.json",
               "projects/state-auth/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "cdk-selectable": {
+      "projectType": "library",
+      "root": "projects/cdk-selectable",
+      "sourceRoot": "projects/cdk-selectable/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "tsConfig": "projects/cdk-selectable/tsconfig.lib.json",
+            "project": "projects/cdk-selectable/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/cdk-selectable/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/cdk-selectable/src/test.ts",
+            "tsConfig": "projects/cdk-selectable/tsconfig.spec.json",
+            "karmaConfig": "projects/cdk-selectable/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/cdk-selectable/tsconfig.lib.json",
+              "projects/cdk-selectable/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
