--- a/projects/kbtv-client/tsconfig.json
+++ b/projects/kbtv-client/tsconfig.json
@@ -69,6 +69,10 @@
       "cdk-selectable": [
         "../../dist/cdk-selectable/cdk-selectable",
         "../../dist/cdk-selectable"
+      ],
+      "model-data-table": [
+        "../../dist/model-data-table/model-data-table",
+        "../../dist/model-data-table"
       ]
     },
   },
