--- a/projects/kbtv-client/src/manifest.json
+++ b/projects/kbtv-client/src/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#006064",
   "display": "standalone",
   "scope": "/",
-  "start_url": "/",
+  "start_url": "/index.html",
   "icons": [
     {
       "src": "assets/icons/icon-72x72.png",
