--- a/package.json
+++ b/package.json
@@ -18,53 +18,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.5",
-    "@angular/cdk": "~11.0.3",
-    "@angular/common": "^11.0.5",
-    "@angular/compiler": "^11.0.5",
-    "@angular/core": "^11.0.5",
+    "@angular/animations": "^11.2.7",
+    "@angular/cdk": "^11.2.6",
+    "@angular/common": "^11.2.7",
+    "@angular/compiler": "^11.2.7",
+    "@angular/core": "^11.2.7",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "^11.0.5",
-    "@angular/localize": "^11.0.5",
-    "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "^11.0.5",
-    "@angular/platform-browser-dynamic": "^11.0.5",
-    "@angular/pwa": "^0.901.12",
-    "@angular/router": "^11.0.5",
-    "@angular/service-worker": "^11.0.5",
+    "@angular/forms": "^11.2.7",
+    "@angular/localize": "^11.2.7",
+    "@angular/material": "^11.2.6",
+    "@angular/platform-browser": "^11.2.7",
+    "@angular/platform-browser-dynamic": "^11.2.7",
+    "@angular/pwa": "^0.901.15",
+    "@angular/router": "^11.2.7",
+    "@angular/service-worker": "^11.2.7",
     "ag-grid-angular": "^23.2.1",
     "ag-grid-community": "^23.2.1",
     "hammerjs": "^2.0.8",
     "idb-keyval": "^3.2.0",
     "ngx-google-places-autocomplete": "^2.0.4",
     "rxjs": "~6.5.5",
-    "tslib": "^2.0.1",
+    "tslib": "^2.1.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.5",
-    "@angular/cli": "^11.0.5",
-    "@angular/compiler-cli": "^11.0.5",
-    "@angular/language-service": "^11.0.5",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/cli": "^11.2.6",
+    "@angular/compiler-cli": "^11.2.7",
+    "@angular/language-service": "^11.2.7",
     "@compodoc/compodoc": "^1.1.11",
-    "@types/jasmine": "^3.6.2",
+    "@types/jasmine": "^3.6.7",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.14.16",
+    "@types/node": "^14.14.35",
     "codelyzer": "^5.2.2",
-    "dependency-cruiser": "^9.21.1",
-    "jasmine-core": "^3.6.0",
+    "dependency-cruiser": "^9.24.0",
+    "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "^5.0.2",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "ng-packagr": "^11.0.3",
+    "ng-packagr": "^11.2.4",
     "protractor": "^7.0.0",
     "ts-node": "^8.10.2",
     "tslint": "~6.1.0",
-    "typedoc": "^0.20.14",
-    "typescript": "^4.0.5",
+    "typedoc": "^0.20.34",
+    "typescript": "^4.1.5",
     "webpack-bundle-analyzer": "^3.9.0"
   }
 }
