--- a/libs/confirm-dialog/package.json
+++ b/libs/confirm-dialog/package.json
@@ -5,8 +5,7 @@
   "peerDependencies": {
     "@angular/common": "^11.0.5",
     "@angular/core": "^11.0.5",
-    "@angular/material": "^11.0.5",
-    "@angular/flex-layout": "^10.0.0-beta.32"
+    "@angular/material": "^11.0.5"
   },
   "dependencies": {
     "tslib": "^2.0.0"
