--- a/libs/google-places-autocomplete/package.json
+++ b/libs/google-places-autocomplete/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "sideEffects": false,
   "peerDependencies": {
-    "@angular/core": "^11.2.7"
+    "@angular/core": "^11.2.7",
+    "@angular/common": "^11.2.7"
   },
   "dependencies": {
     "tslib": "^2.0.0"
